# IT_books_spider

./: .gitignore  README.md  config.ini  crontab-template.sh  fabfile.py  items.py  onliner_spider.py  pyproject.toml  requirements.txt  scrapy.cfg
bookscrawler/: items.py  parse_config.py  pipelines.py  report.html  settings.py  style.css
bookscrawler/spiders/: exceptions.py  onliner_spider.py  url_cache.py
bookscrawler/tests/: conftest.py  test_url_cache.py
web_ui/: app.py
web_ui/templates/: base.html  books.html
