[tool.poetry]
name = "it_books_spider"
version = "0.1.0"
description = "Parses topics from local onliner.by forum to track items based on keywords."
authors = ["Andrew Sviridov <mrlokans@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5.3"
Jinja2 = "2.10"
pandas = "^0.25.3"
Scrapy = "^1.8.0"
requests = "^2.22.0"
mailer = "^0.8.1"
fabric3 = "^1.14.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
